--- a/pyproject.toml
+++ b/pyproject.toml
@@ -53,6 +53,11 @@ uuid_utils = "^0.7.0"
 aioquic = "^1.0.0"
 starlette = "^0.37.2"
 
+h2 = "^4.1.0"
+uvicorn = "*"
+hypercorn = "*"
+aiohttp-asgi = "*"
+
 # askar
 aries-askar= { version = "~0.3.0", optional = true }
 indy-credx= { version = "~1.1.1", optional = true }
